--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <modules>
+        <module>
+            cvRhApi
+        </module>
+        <module>
+            cvRhData
+        </module>
+        <module>
+            cvRhService
+        </module>
+    </modules>
 </project>
